package seedu.address.model.application;

public enum Status {
APPLIED, INTERVIEWING, OFFERED, REJECTED, WITHDRAWN
}
